enhancement of xml handling

--- a/inginious-problems-blockly/templates/box_blockly.html
+++ b/inginious-problems-blockly/templates/box_blockly.html
@@ -120,7 +120,7 @@ $#
 
 $if blockly_dico["filenames"] is not None:
     $for filename in blockly_dico["filenames"]:
-        <script src='$get_homepath()/course/$blockly_dico["courseid"]/$blockly_dico["taskid"]/$filename' type="text/javascript" charset="utf-8"></script>
+        <script src="$get_homepath()/course/$blockly_dico['courseid']/$blockly_dico['taskid']/$filename" type="text/javascript" charset="utf-8"></script>
 
 <!-- Local JavaScript -->
 <script src="$get_homepath()/plugins/blockly/static/blockly/blockly.js" type="text/javascript" charset="utf-8"></script>
