uncomment factory css

--- a/inginious-problems-blockly/templates/editbox_blockly_templates.html
+++ b/inginious-problems-blockly/templates/editbox_blockly_templates.html
@@ -139,7 +139,7 @@ $#
 
         <div id="blocklyFactory">
             <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
-            <!--link rel="stylesheet" href="$get_homepath()/plugins/blockly/static/blocklyfactory/factory.css"-->
+            <link rel="stylesheet" href="$get_homepath()/plugins/blockly/static/blocklyfactory/factory.css">
             <script>
                 var blocklyFactory;
                 var init = function() {
