--- a/inginious-problems-blockly/static/blocklyfactory/factory.css
+++ b/inginious-problems-blockly/static/blocklyfactory/factory.css
@@ -18,7 +18,7 @@
  * limitations under the License.
  */
 
-/*html, body {
+html, body {
   height: 100%;
   min-height: 375px;
 }
@@ -28,7 +28,7 @@ body {
   font-family: sans-serif;
   margin: 0 5px;
   overflow: hidden;
-}*/
+}
 
 h1 {
   font-weight: normal;
@@ -139,6 +139,10 @@ button, .buttonStyle {
 
 #helpButton {
   float: right;
+}
+
+#saveToINGI {
+  float:right
 }
 
 #blockFactoryContent {
