first commit - code area in python and js

--- a/inginious-problems-blockly/templates/editbox_blockly.html
+++ b/inginious-problems-blockly/templates/editbox_blockly.html
@@ -160,6 +160,17 @@ $#
                   </label></div>
               </div>
           </div>
+          <div class="form-group">
+              <label for="language-PID" class="col-sm-2 control-label">Language <a title="Code language for blockly code area"><span class="glyphicon glyphicon-question-sign"></span></a></label>
+              <div class="col-sm-8">
+                  <label>
+                      <select class="form-control" id="language-PID" name="problem[PID][options][language]">
+                        <option value="python">Python</option>
+                        <option value="javascript">Javascript</option>
+                      </select>
+                  </label>
+              </div>
+          </div>
       </div>
     </div>
   </div>
